// Vitest Snapshot v1

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-3qwsx5"
    >
      3
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-47028"
      />
      <li
        class="css-47028"
      />
      <li
        class="css-47028"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-3qwsx5"
    >
      1
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-47028"
      />
      <li
        class="css-3ldhk3"
      />
      <li
        class="css-3ldhk3"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-3qwsx5"
    >
      2
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-47028"
      />
      <li
        class="css-47028"
      />
      <li
        class="css-3ldhk3"
      />
    </ul>
  </div>
</DocumentFragment>
`;
